Fixes options letter on firefox

--- a/src/components/pages/GamePage/Scenes/SelectOption/DialogSelectOption/Option/Letter/letter.css
+++ b/src/components/pages/GamePage/Scenes/SelectOption/DialogSelectOption/Option/Letter/letter.css
@@ -1,4 +1,5 @@
 
 .letter-container {
     height: 80%;
+    width: 80%;
 }
